--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
   <title>Matchmaker 2.0</title>
 </head>
 <body>
-  <h1>Matchmaker 2.0</h1>
-  <p>💓Your perfect match Start here💓</p>
-
-  <label></label>
+  <h1>Matchmaker 2.0 - You Perfect Match Starts Here</h1>
 </body>
 </html>
 
