Fix html and update Matchmaker webpage

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>Matchmaker 2.0</title>
 </head>
 <body>
-  <h1>Matchmaker 2.0 - You Perfect Match Starts Here</h1>
+  <h1>Matchmaker 2.0 - Your Perfect Match Starts Here</h1>
 </body>
 </html>
-
