--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Matchmaker 2.0</title>
 </head>
 <body>
-  <h1>Matchmaker 2.0 - Your Perfect Match Starts Here</h1>
+  <h1>Matchmaker 2.0 — Your Perfect Match Starts Here</h1>
 </body>
 </html>
+
