--- a/index.html
+++ b/index.html
@@ -7,5 +7,83 @@
 </head>
 <body>
   <h1>Matchmaker 2.0 Your Perfect Match Starts Here</h1>
+
+
+<label>Dell is better than Apple</label><br />
+<select id="q1">
+	<option value="5">Strongly Agree</option>
+	<option value="4">Agree</option>
+	<option value="3">Neither agree nor disagree</option>
+	<option value="2">Disagree</option>
+	<option value="1">Strongly Disagree</option>
+</select>
+<br /><br />
+
+<label>Coffee ice cream flavor is better than Chocolate ice cream flavor</label><br />
+<select id="q2">
+	<option value="5">Strongly Agree</option>
+	<option value="4">Agree</option>
+	<option value="3">Neither agree nor disagree</option>
+	<option value="2">Disagree</option>
+	<option value="1">Strongly Disagree</option>
+</select>
+<br /><br />
+
+<label>Geometry is better than arithmethic.</label><br />
+<select id="q3">
+	<option value="5">Strongly Agree</option>
+	<option value="4">Agree</option>
+	<option value="3">Neither agree nor disagree</option>
+	<option value="2">Disagree</option>
+	<option value="1">Strongly Disagree</option>
+</select>
+<br /><br />
+
+<label>Weekends is better than Travis Scott.</label><br />
+<select id="q4">
+	<option value="5">Strongly Agree</option>
+	<option value="4">Agree</option>
+	<option value="3">Neither agree nor disagree</option>
+	<option value="2">Disagree</option>
+	<option value="1">Strongly Disagree</option>
+</select>
+<br /><br />
+
+<label>Android phones are better than iphones</label><br />
+<select id="q4">
+	<option value="5">Strongly Agree</option>
+	<option value="4">Agree</option>
+	<option value="3">Neither agree nor disagree</option>
+	<option value="2">Disagree</option>
+	<option value="1">Strongly Disagree</option>
+</select>
+<br /><br />
+
+<label>Do you think should we go on date?</label><br />
+<select id="q5">
+	<option value="5">Strongly Agree</option>
+	<option value="4">Agree</option>
+	<option value="3">Neither agree nor disagree</option>
+	<option value="2">Disagree</option>
+	<option value="1">Strongly Disagree</option>
+</select>
+
+<br /><br /><br />
+
+ <button onclick="sayHello()">Click Me!</button>
+
+<script>
+console.log("Starting JavaScript");
+
+function sayHello() {
+  console.log("Hello, world!");
+  alert("Hello, world!"); // optional popup
+}
+
+sayHello(); // you can remove this if you only want it to run on button click
+
+console.log("Ending JavaScript");
+</script>
 </body>
 </html>
+
