--- a/index.html
+++ b/index.html
@@ -83,6 +83,50 @@ function sayHello() {
 sayHello(); // you can remove this if you only want it to run on button click
 
 console.log("Ending JavaScript");
+
+// Get the current values of the dropdown controls.
+	let question1Response = document.getElementById("q1").selectedOptions[0].value;
+	let question2Response = document.getElementById("q2").selectedOptions[0].value;
+	let question3Response = document.getElementById("q3").selectedOptions[0].value;
+	let question4Response = document.getElementById("q4").selectedOptions[0].value;
+	let question5Response = document.getElementById("q5").selectedOptions[0].value;
+
+	// Optionally log the values associated with question 1 through 3 to the console. 
+	console.log("Question 1 Answers:")
+	console.log(document.getElementById("q1").selectedOptions[0].text);
+	console.log(document.getElementById("q1").selectedOptions[0].value);
+	console.log(question1Response);
+
+	console.log("Question 2 Answers:");
+	console.log(document.getElementById("q2").selectedOptions[0].text);
+	console.log(document.getElementById("q2").selectedOptions[0].value);
+	console.log(question2Response);
+
+	console.log("Question 3 Answers:");
+	console.log(document.getElementById("q3").selectedOptions[0].text);
+	console.log(document.getElementById("q3").selectedOptions[0].value);
+	console.log(question2Response);
+
+	// Todo: Calculate compatibility scores.
+	let question1Compatibility = 5 - Math.abs(question1Response - DESIRED_RESPONSE[0]);
+	let question2Compatibility = 5 - Math.abs(question2Response - DESIRED_RESPONSE[1]);
+	let question3Compatibility = 5 - Math.abs(question3Response - DESIRED_RESPONSE[2]);
+
+	console.log("c1="+question1Compatibility);
+	console.log("c2="+question2Compatibility);
+	console.log("c3="+question3Compatibility);
+
+	// Calculate total compatibility. 
+	let totalCompatibility = question1Compatibility + question2Compatibility + question3Compatibility;
+
+	// Convert totalCompatibility to a percentage.
+	totalCompatibility *= 100 / MAX_SCORE;
+	totalCompatibility = Math.round(totalCompatibility);
+	console.log("tc="+ totalCompatibility);
+
+	document.getElementById("compatibility").innerHTML = "Your compatibility is: " + totalCompatibility;
+}
+
 </script>
 </body>
 </html>
