Initial commit: Matchmaker 2.0 website

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
+<head><meta charset="UTF-8">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Matchmaker 2.0</title>
 
@@ -76,9 +76,10 @@
 </select><br /><br />
 
 <button type="button" onclick="calculateCompatibility()">Click Me!</button>
+
 <p id="compatibility"></p>
 
-
+  <script src="script.js"></script>
 <script>
   const MAX_SCORE = 30;
   const DESIRED_RESPONSE = [5, 5, 5, 5, 5, 5];
@@ -107,6 +108,7 @@
     console.log("Your compatibility is: " + percentage + "%");
   }
 </script>
+<script src="script.js"></script>
 
 </body>
 </html>
